--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -141,31 +141,51 @@ if(HAVE_STDINT_H)
       return (int)i;
   }" HAVE_INTPTR_T)
 endif()
+
 if (HAVE_UINTPTR_T)
-  message(STATUS "HAVE_UINTPTR_T 1: uintptr_t defined in stdint.h... YES")
+  if(NOT printed_stati)
+    message(STATUS "HAVE_UINTPTR_T 1: uintptr_t defined in stdint.h... YES")
+  endif()
 else()
-  message(STATUS "uintptr_t defined in stdint.h... NO")
+  if(NOT printed_stati)
+    message(STATUS "uintptr_t defined in stdint.h... NO")
+  endif()
   set(uintptr_t "unsigned long long int" )
-  message(STATUS "Setting #define uintptr_t " ${uintptr_t})
+  if(NOT printed_stati)
+    message(STATUS "Setting #define uintptr_t " ${uintptr_t})
+  endif()
 endif()
 if (uintptr_t)
-  message(STATUS "uintptr_t value considered YES ")
+  if(NOT printed_stati)
+    message(STATUS "uintptr_t value considered YES ")
+  endif()
 else()
-  message(STATUS "uintptr_t value considered NO ")
+  if(NOT printed_stati)
+    message(STATUS "uintptr_t value considered NO ")
+  endif()
 endif()
 if (HAVE_INTPTR_T)
-  message(STATUS "HAVE_INTPTR_T 1: intptr_t defined in stdint.h... YES")
+  if(NOT printed_stati)
+    message(STATUS "HAVE_INTPTR_T 1: intptr_t defined in stdint.h... YES")
+  endif()
 else()
-  message(STATUS "intptr_t defined in stdint.h... NO")
+  if(NOT printed_stati)
+    message(STATUS "intptr_t defined in stdint.h... NO")
+  endif()
   set(uintptr_t "long long int" )
-  message(STATUS "Setting #define intptr_t " ${intptr_t})
+  if(NOT printed_stati)
+    message(STATUS "Setting #define intptr_t " ${intptr_t})
+  endif()
 endif()
 if (intptr_t)
-  message(STATUS "intptr_t value considered YES ")
+  if(NOT printed_stati)
+    message(STATUS "intptr_t value considered YES ")
+  endif()
 else()
-  message(STATUS "intptr_t value considered NO ")
+  if(NOT printed_stati)
+    message(STATUS "intptr_t value considered NO ")
+  endif()
 endif()
-
 
 check_c_source_compiles("
   static unsigned foo( unsigned x,
@@ -180,7 +200,9 @@ check_c_source_compiles("
       y = foo(12,y);
       return 0;
   }"    HAVE_UNUSED_ATTRIBUTE)
-message(STATUS "Checking compiler supports __attribute__ unused... ${HAVE_UNUSED_ATTRIBUTE}")
+if(NOT printed_stati)
+  message(STATUS "Checking compiler supports __attribute__ unused... ${HAVE_UNUSED_ATTRIBUTE}")
+endif()
 
 check_c_source_compiles([=[
   #include "stdafx.h"
@@ -272,7 +294,11 @@ int main()
     return 0;
 }]=] HAVE_INTPTR_T)
 
-message(STATUS "CMAKE_SIZEOF_VOID_P ... " ${CMAKE_SIZEOF_VOID_P} )
+if(NOT printed_stati)
+  message(STATUS "CMAKE_SIZEOF_VOID_P ... " ${CMAKE_SIZEOF_VOID_P} )
+endif()
+
+set(printed_stati On CACHE INTERNAL "")
 
 add_subdirectory(src/lib/libdwarf)
 configure_file(cmake/config.h.cmake config.h)
