--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,7 +100,7 @@ include(CheckCSourceRuns)
 include(CheckSymbolExists)
 ### Version also appears in configure.ac
 set(VERSION 0.7.1)
-set(PACKAGE_VERSION "${VERSION}")
+set(PACKAGE_VERSION "\"${VERSION}\"")
 set(PACKAGE_NAME "libdwarf" )
 set(PACKAGE_STRING "\"${PACKAGE_NAME} ${VERSION}\"")
 string(REGEX REPLACE "[\"]" "" tarname1 "${PACKAGE_STRING}" )
